@@ -12,7 +12,7 @@
 .de Id
 .ds Dt \\$4
 ..
-.Id $Id: grep.1,v 1.21 2001/09/25 10:00:16 bero Exp $
+.Id $Id: grep.1,v 1.22 2001/11/19 13:23:29 bero Exp $
 .TH GREP 1 \*(Dt "GNU Project"
 .SH NAME
 grep, egrep, fgrep \- print lines matching a pattern
@@ -291,6 +291,10 @@ is operating, or if an I/O error occurs.
 .BR \-n ", " \-\^\-line-number
 Prefix each line of output with the line number
 within its input file.
+.TP
+.BR \-o ", " \-\^\-only-matching
+Show only the part of a matching line that matches
+.I PATTERN.
 .TP
 .BR \-\^\-line-buffering
 Use line buffering, it can be a performance penality.
