@@ -1,3 +1,7 @@
+2001-11-19  Bernhard Rosenkraenzer <bero@redhat.com>
+	* src/grep.c: Add --only-matching (-o) switch (see NEWS)
+	* doc/grep.texi, doc/grep.1, NEWS: Document changes
+
 2001-09-25  Bernhard Rosenkraenzer <bero@redhat.com>
 	* configure.in: Detect pcre correctly even when it's in
 	  non-standard locations, using pcre-config
